<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/displayTv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/default_display_text"
        android:textSize="40sp"
        android:textColor="#5C5C5C"
        android:gravity="end|bottom"
        android:padding="4dp"
        android:background="@color/gray_200"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:padding="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights">

            <Button
                android:id="@+id/btn_seven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_seven_text"
                android:layout_marginHorizontal="4dp"
                android:textSize="20sp"
                android:backgroundTint="@color/gray_500"/>
            <Button
                android:id="@+id/btn_eight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_eight_text"
                android:layout_marginHorizontal="4dp"
                android:textSize="20sp"
                android:backgroundTint="@color/gray_500"/>

            <Button
                android:id="@+id/btn_nine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_nine_text"
                android:layout_marginHorizontal="4dp"
                android:textSize="20sp"
                android:backgroundTint="@color/gray_500"/>

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_plus_text"
                android:layout_marginHorizontal="4dp"
                android:textSize="20sp"
                android:backgroundTint="@color/gray_700"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights">

            <Button
                android:id="@+id/btn_four"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_four_text"
                android:layout_marginHorizontal="4dp"
                android:textSize="20sp"
                android:backgroundTint="@color/gray_500"/>
            <Button
                android:id="@+id/btn_five"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_five_text"
                android:layout_marginHorizontal="4dp"
                android:textSize="20sp"
                android:backgroundTint="@color/gray_500"/>

            <Button
                android:id="@+id/btn_six"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_six_text"
                android:layout_marginHorizontal="4dp"
                android:textSize="20sp"
                android:backgroundTint="@color/gray_500"/>

            <Button
                android:id="@+id/btn_subtract"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_subtract_text"
                android:layout_marginHorizontal="4dp"
                android:textSize="20sp"
                android:backgroundTint="@color/gray_700"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights">

            <Button
                android:id="@+id/btn_one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_one_text"
                android:layout_marginHorizontal="4dp"
                android:textSize="20sp"
                android:backgroundTint="@color/gray_500"/>
            <Button
                android:id="@+id/btn_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_two_text"
                android:layout_marginHorizontal="4dp"
                android:textSize="20sp"
                android:backgroundTint="@color/gray_500"/>

            <Button
                android:id="@+id/btn_three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_three_text"
                android:layout_marginHorizontal="4dp"
                android:textSize="20sp"
                android:backgroundTint="@color/gray_500"/>

            <Button
                android:id="@+id/btn_multiply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_multiply_text"
                android:layout_marginHorizontal="4dp"
                android:textSize="20sp"
                android:backgroundTint="@color/gray_700"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights">

            <Button
                android:id="@+id/btn_point"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_point_text"
                android:layout_marginHorizontal="4dp"
                android:textSize="20sp"
                android:backgroundTint="@color/gray_700"/>
            <Button
                android:id="@+id/btn_zero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_zero_text"
                android:layout_marginHorizontal="4dp"
                android:textSize="20sp"
                android:backgroundTint="@color/gray_500"/>

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_clear_text"
                android:layout_marginHorizontal="4dp"
                android:textSize="20sp"
                android:backgroundTint="@color/gray_700"/>

            <Button
                android:id="@+id/btn_divide"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_divide_text"
                android:layout_marginHorizontal="4dp"
                android:textSize="20sp"
                android:backgroundTint="@color/gray_700"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights">

            <Button
                android:id="@+id/btn_equal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_equal_text"
                android:layout_marginHorizontal="4dp"
                android:textSize="20sp"
                android:backgroundTint="@color/gray_700"/>

        </LinearLayout>



        
        
    </LinearLayout>


</LinearLayout>